2005-05-19 Scott Dattalo <scott@dattalo.com>
	* src/ttoken.h, src/ttoken.cc, src/bytelog.cc, src/bytelog.h,
	src/pthread-wrap.h: Create a gpsim namespace and place the objects
	in these files in there.
	* cli/scan.ll: removed some printf debugging junk.

2005-05-19 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll, cli/cmd_macro.cc, cli/parse.yy, cli/input.cc:
	A recent change in string processing broke macros. Also, began
	adding code to support nested macros.
	* regression/macro_test/macro_test.asm,
	regression/macro_test/macro_test.stc: Added new regression test
	for macros.
	
2005-05-18 Scott Dattalo <scott@dattalo.com>
	* cli/scan.ll: Fixed end-of-line scan bug introduced on 5-16.

2005-05-16 J.R. Heisey <jrheisey@sourceforge.com>
	* src/os_dependent.cc: Added debug code to allow alternate
	directory paths for module libraries so I can specify debug
	build locations for shared libraries.
	* src/program_files.cc: Fixed bug caused by symbol table not
	being cleared when Program files are loaded.
	* src/modules.cc: Fixed bug when a module library failed to 
	load it was still being added to the installed library list.
	* configure.ac: bumped build number to 0.21.5

2005-05-16 Scott Dattalo <scott@dattalo.com>
	* cli/input.cc, cli/scan.h, cli/scan.ll, cli/input.cc: command
	assertions where causing parse errors.

2005-05-14 Scott Dattalo <scott@dattalo.com>
	* cli/cmd_processor.cc: The processor command wasn't working
	because of a typo in an if statement.
	* cli/parse.yy, cli/cmd_break.cc, cli/cmd_break.h: Added 'break
	#number' to allow inspection of an individual break point. Clean
	up some memory 	management.
	* src/breakpoints.cc: 'dump1()' wasn't checking to see if the
	break point number was valid.
	* src/os_dependent.cc: non-windows file extension comparisons were
	not working.
	* src/pic-processor.cc, src/symbol.h, src/symbol.cc, src/value.cc:
	val_symbols like the PIC program counter can now be parts of gpsim
	expressions.